docs: 기술 설명 정정 및 레거시 개선 가이드 추가