@@ -1,86 +1,40 @@
-# Java 25: Enhanced Stability and Modern Productivity
+# Java 25: 정식 기능과 Preview 구분
 
-Java 25은 2025년 9월에 출시된 최신 **LTS(Long-Term Support)** 버전입니다. Java 21 이후의 혁신들을 안정화하고, 개발자 생산성과 런타임 효율성을 높이는 기능들이 대거 포함되었습니다.
+기준: JDK 25 GA 기능 상태, 확인일 2026-09-07. LTS 지원 기간과 배포판별 제공 기능은 벤더 정책을 별도로 확인한다.
 
----
+## 주요 기능 상태
 
-## 1. Scoped Values (Final)
+| 기능 | JDK 25 상태 | 적용 시 확인 |
+| :--- | :--- | :--- |
+| Scoped Values — JEP 506 | 정식 | scope 안의 값 바인딩. 참조한 객체 자체가 자동으로 불변이 되지는 않음 |
+| Flexible Constructor Bodies — JEP 513 | 정식 | `super/this` 호출 전 안전한 검증·계산 및 제한된 필드 초기화 |
+| Module Import Declarations — JEP 511 | 정식 | 모듈이 export한 패키지의 접근 가능한 타입. 내부 타입까지 모두 공개하지 않음 |
+| Compact Source Files / Instance Main — JEP 512 | 정식 | 작은 프로그램의 진입점과 소스 구조 간소화 |
+| Compact Object Headers — JEP 519 | 제품 기능 | **기본 비활성**, `-XX:+UseCompactObjectHeaders`로 활성화 |
+| Structured Concurrency — JEP 505 | **다섯 번째 Preview** | `--enable-preview` 필요 |
+| Primitive Types in Patterns — JEP 507 | **세 번째 Preview** | `--enable-preview` 필요 |
+| Stable Values — JEP 502 | Preview | 정식 API로 취급하지 않음 |
+| Vector API — JEP 508 | 열 번째 Incubator | 별도 incubator 모듈 |
 
-`ThreadLocal`의 대안으로 도입된 Scoped Values가 정식 기능으로 채택되었습니다.
+상태와 옵션은 [Oracle JDK 25 릴리스 노트](https://www.oracle.com/java/technologies/javase/25-relnote-issues.html)를 기준으로 구분했다. 기존의 “Structured Concurrency Final/Stable” 안내는 잘못된 설명이었다.
 
-- **특징:** 데이터가 불변(Immutable)이며, 특정 스코프 내에서만 유효합니다.
-- **이점:** 가상 스레드(Virtual Threads) 환경에서 수천 수만 개의 스레드가 데이터를 공유할 때 메모리 효율성과 안정성이 `ThreadLocal`보다 압도적으로 뛰어납니다.
+## 기능별 오해
 
-```java
-private final static ScopedValue<String> USER = ScopedValue.newInstance();
+ScopedValue는 정해진 동적 범위에서 바인딩을 공유한다. 모든 ThreadLocal 사용을 그대로 대체할 수 있는 것은 아니다. 가변 객체를 넣으면 그 객체의 동시 접근 문제는 남는다. [ScopedValue API](https://docs.oracle.com/en/java/javase/25/docs/api/java.base/java/lang/ScopedValue.html)
 
-ScopedValue.where(USER, "Rudy").run(() -> {
-    // 이 블록 안에서만 USER.get() 가능
-    System.out.println(USER.get()); 
-});
+유연한 생성자는 생성 중인 객체를 자유롭게 사용하는 기능이 아니다. 조기 생성 문맥의 제약 안에서 허용되는 필드 초기화가 있으므로, “인스턴스 필드 접근이 전부 금지”라고 설명하는 것도 부정확하다. [Java 25 생성자 규칙](https://docs.oracle.com/javase/specs/jls/se25/html/jls-8.html#jls-8.8.7)
+
+Compact Object Headers는 정식 제품 옵션이 되었지만 기본값은 꺼져 있다. 활성화 전후의 heap, GC, 처리량을 직접 비교한다.
+
+Structured Concurrency의 성공·실패·취소 정책은 사용하는 Joiner에 따라 달라진다. 이전 Preview 예제를 그대로 가져오지 말고 JDK 25 API로 컴파일한다. [StructuredTaskScope API](https://docs.oracle.com/en/java/javase/25/docs/api/java.base/java/util/concurrent/StructuredTaskScope.html)
+
+## Preview 실습
+
+JDK 25 도구로 해당 버전의 Preview 예제를 컴파일·실행한다. CI·테스트·운영 실행 옵션도 일치시켜야 한다.
+
+```bash
+javac --release 25 --enable-preview Main.java
+java --enable-preview Main
 ```
 
----
-
-## 2. Flexible Constructor Bodies (Final)
-
-생성자 본문에서 `super(...)`나 `this(...)` 호출 전에도 코드를 작성할 수 있게 되었습니다.
-
-- **특징:** 부모 클래스의 생성자를 호출하기 전, 인자를 계산하거나 검증하는 로직을 자유롭게 넣을 수 있습니다.
-- **제한:** `super()` 호출 전에는 인스턴스 필드에 접근할 수 없습니다.
-
-```java
-public class Child extends Parent {
-    public Child(int value) {
-        int processed = validate(value); // super() 호출 전 로직 가능
-        super(processed);
-    }
-}
-```
-
----
-
-## 3. Compact Object Headers (Final)
-
-64비트 아키텍처에서 Java 객체의 헤더 크기를 대폭 줄였습니다.
-
-- **효과:** 객체당 메모리 점유율이 줄어들어 전체적인 힙(Heap) 메모리 사용량이 감소하며, 데이터 지역성(Data Locality)이 개선되어 성능이 향상됩니다.
-- **대상:** 대규모 객체를 다루는 애플리케이션에서 특히 큰 효과를 볼 수 있습니다.
-
----
-
-## 4. Module Import Declarations (Final)
-
-모듈 전체를 한 번에 임포트하여 중복되는 `import` 문을 획기적으로 줄일 수 있습니다.
-
-```java
-import module java.base; // java.base 모듈의 모든 공개 클래스 사용 가능
-
-public class Main {
-    public static void main(String[] args) {
-        List<String> list = new ArrayList<>(); // java.util.List 등 자동 포함
-    }
-}
-```
-
----
-
-## 5. Structured Concurrency (Final/Stable)
-
-여러 비동기 작업을 하나의 논리적인 작업 단위로 묶어 관리하는 구조적 동시성이 안정화되었습니다.
-
-- **특징:** 하위 작업 중 하나가 실패하면 다른 작업들을 자동으로 취소하고 리소스를 정리합니다.
-- **효과:** 멀티스레드 코드의 가독성, 유지보수성, 에러 처리가 비약적으로 개선됩니다.
-
----
-
-## 6. 기타 주요 변경 사항
-
-- **Primitive Types in Patterns**: `instanceof`나 `switch`에서 기본 타입(int, double 등)에 대한 패턴 매칭 지원.
-- **Generational Shenandoah**: Shenandoah GC에 세대별(Generational) 관리 기능이 추가되어 효율 개선.
-- **32-bit x86 Port 제거**: 레거시 아키텍처 지원을 종료하고 현대적 시스템에 집중.
-
----
-
-## 요약
-Java 25은 **가상 스레드 환경의 완성(Scoped Values, Structured Concurrency)**과 **언어적 현대화(Flexible Constructor, Module Import)**를 통해 Java 21보다 더 강력하고 안정적인 개발 환경을 제공하는 LTS 버전입니다.
+운영 업그레이드는 JDK·Spring Boot·빌드 플러그인·agent·driver의 호환성을 확인하고 회귀 테스트로 판단한다. 이 문서는 기능 상태 정리이며 JDK 25 운영 적용 실적을 의미하지 않는다.
